[gd_scene load_steps=2 format=3 uid="uid://ymtiista3jxq"]

[ext_resource type="Script" path="res://Scripts/SetGameCondition.gd" id="1_lv68k"]

[node name="SetGameCondition" type="CenterContainer"]
offset_right = 250.0
offset_bottom = 136.0
script = ExtResource("1_lv68k")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBox_Board_Size" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label_Title_Board_Size" type="Label" parent="VBoxContainer/HBox_Board_Size"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "LOCALE_BOARDSIZE"
horizontal_alignment = 2

[node name="Option_Board_Size" type="OptionButton" parent="VBoxContainer/HBox_Board_Size"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "9x9"
popup/item_0/id = 0
popup/item_1/text = "10x10"
popup/item_1/id = 1
popup/item_2/text = "11x11"
popup/item_2/id = 2

[node name="HBox_Block_Set" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label_Title_Block_Set" type="Label" parent="VBoxContainer/HBox_Block_Set"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "LOCALE_BLOCKSET"
horizontal_alignment = 2

[node name="Btn_Left_Block_Set" type="Button" parent="VBoxContainer/HBox_Block_Set"]
layout_mode = 2
text = "◀"

[node name="Label_Block_Set" type="Label" parent="VBoxContainer/HBox_Block_Set"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Set A"
horizontal_alignment = 1

[node name="Btn_Right_Block_Set" type="Button" parent="VBoxContainer/HBox_Block_Set"]
layout_mode = 2
text = "▶"

[node name="Btn_Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LOCALE_PLAY"

[node name="Btn_Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LOCALE_BACK"

[connection signal="item_selected" from="VBoxContainer/HBox_Board_Size/Option_Board_Size" to="." method="_on_option_board_size_item_selected"]
[connection signal="pressed" from="VBoxContainer/Btn_Play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Btn_Back" to="." method="_on_btn_back_pressed"]
